--- a/firstApp/src/app/app.component.html
+++ b/firstApp/src/app/app.component.html
@@ -3,7 +3,10 @@
     <h1>{{title}}</h1>
     <h2>Drivers</h2>
     <h3>score: {{score}}</h3>
+    <h3>earnings: {{earningsPerSecond}}</h3>
     <button (click)="incrementSoftmultiplier()">upgrade car: {{incrementSoftLevel()}} </button>
+    <button (click)="startIdle()">idle drive </button>
+    <button (click)="speedIdle()">faster</button>
 
   </div>
 </main>
